xournalpp (1.0.17-1) unstable; urgency=medium

  * Update packaging scripts
  * Patch some upstream issues that annoy lintian
  * Prepare for official initial debian release (closes: #927076)
  * Deal with timestamp issues for reproducible build

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 03 Feb 2020 02:54:56 +0000

xournalpp (1.0.6-0) unstable; urgency=low

  * Multiple fixes and improvements

 -- Andreas Butti <andreasbutti@gmail.com>  Sun, 09 Dec 2018 13:32:00 +0100

xournalpp (1.0.5-0) unstable; urgency=low

  * Multiple fixes and improvements

 -- Andreas Butti <andreasbutti@gmail.com>  Sun, 09 Dec 2018 13:32:00 +0100

xournalpp (1.0.4-0) unstable; urgency=low

  * Layer Sidebar
  * Fill option
  * Multiple fixes and improvements

 -- Andreas Butti <andreasbutti@gmail.com>  Sun, 09 Dec 2018 13:32:00 +0100

xournalpp (1.0.3-0) unstable; urgency=low

  * Fixed debian dependencies

 -- Andreas Butti <andreasbutti@gmail.com>  Sun, 09 Dec 2018 13:32:00 +0100

xournalpp (1.0.2-0) unstable; urgency=low

  * Initial release Debian Packaging

 -- Andreas Butti <andreasbutti@gmail.com>  Mon, 03 Dec 2018 20:00:00 +0100