@@ -3,4 +3,5 @@
 /*.substvars
 /debhelper-build-stamp
 /files
+/xournalpp.1
 /xournalpp/
