@@ -4,6 +4,7 @@ Section: x11
 Priority: optional
 Standards-Version: 4.5.0
 Build-Depends: debhelper-compat (= 12), cmake,
+	help2man,
 	libgtk-3-dev, libpoppler-glib-dev, libxml2-dev,
 	portaudio19-dev, libsndfile-dev, liblua5.3-dev, libzip-dev
 Rules-Requires-Root: no
