@@ -1,0 +1,1 @@
+debian/xournalpp.1
